<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourProfile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background"
        android:scaleType="centerCrop"
        android:gravity="center_horizontal">
        <TextView
        android:id="@+id/banner_logi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/Your_Profile"
        android:textAppearance="@style/banner_logi"
        android:textSize="32sp"/>
        <RelativeLayout
            android:id="@+id/frame_25"
            android:layout_width="374dp"
            android:layout_height="693dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/frame_25">
            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="331dp"
                android:src="@drawable/arrow_back"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                android:textAppearance="@style/subtitle"
                android:lineSpacingExtra="1sp"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"/>

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@id/subtitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/avatar2" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/layoutbutton"
                android:layout_below="@id/subtitle"
                android:layout_marginTop="83dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="210dp"
                android:id="@+id/avatar_layout"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/camera"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="@style/title"
                android:textSize="29sp"
                android:layout_below="@id/avatar_layout"
                android:layout_centerHorizontal="true"

                 />

            <TextView
                android:id="@+id/fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="42dp"
                android:layout_below="@id/title"

                android:text="@string/fullname"
                android:textAppearance="@style/fullname"
                android:lineSpacingExtra="1sp"
                android:textSize="16sp"
                />
            <EditText
                android:id="@+id/enter_username"
                android:layout_width="289dp"
                android:layout_height="48dp"
                android:background="@drawable/frame_25"
                android:maxLength="50"
                android:paddingStart="10dp"
                android:layout_below="@id/fullname"
                android:layout_centerHorizontal="true"
                android:inputType="text"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:hint="@string/enter_fullname"/>
            <View
                android:id="@+id/line_1"
                android:layout_width="289dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:background="@drawable/line_3"
                android:layout_below="@id/enter_username"
                />
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="42dp"
                android:layout_below="@id/line_1"
                android:text="@string/email"
                android:textAppearance="@style/fullname"
                android:lineSpacingExtra="1sp"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/enter_email"
                android:layout_width="289dp"
                android:layout_height="48dp"
                android:layout_below="@id/email"
                android:layout_centerHorizontal="true"
                android:background="@drawable/frame_25"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:maxLength="320"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <View
                android:id="@+id/line_2"
                android:layout_width="289dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:background="@drawable/line_3"
                android:layout_below="@id/enter_email"
                />
            <TextView
                android:id="@+id/birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="42dp"
                android:layout_below="@id/line_2"

                android:text="@string/day_of_birt"
                android:textAppearance="@style/fullname"
                android:lineSpacingExtra="1sp"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/enter_birth"
                android:layout_width="289dp"
                android:layout_height="48dp"
                android:layout_below="@id/birth"
                android:layout_centerHorizontal="true"
                android:background="@drawable/frame_25"
                android:hint="@string/enter_birthday"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <View
                android:id="@+id/line_3"
                android:layout_width="289dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:background="@drawable/line_3"
                android:layout_below="@id/enter_birth"
                />
            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="42dp"
                android:layout_below="@id/line_3"
                android:text="@string/phone"
                android:textAppearance="@style/fullname"
                android:lineSpacingExtra="1sp"
                android:textSize="16sp"
                />
            <EditText
                android:id="@+id/enter_phone"
                android:layout_width="289dp"
                android:layout_height="48dp"
                android:background="@drawable/frame_25"
                android:layout_below="@id/phone"
                android:layout_centerHorizontal="true"
                android:inputType="text"
                android:hint="@string/enter_phone_num"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLength="15"
                android:maxLines="1"
                tools:ignore="TextFields" />
            <View
                android:id="@+id/line_4"
                android:layout_width="289dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:background="@drawable/line_3"
                android:layout_below="@id/enter_phone"
                />
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="42dp"
                android:layout_below="@id/line_4"

                android:text="@string/address"
                android:textAppearance="@style/fullname"
                android:lineSpacingExtra="1sp"
                android:textSize="16sp"
                />
            <EditText
                android:id="@+id/enter_address"
                android:layout_width="289dp"
                android:layout_height="48dp"
                android:background="@drawable/frame_25"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_below="@id/address"
                android:layout_centerHorizontal="true"
                android:inputType="text"
                android:maxLength="400"
                android:hint="@string/enter_address"/>
            <View
                android:id="@+id/line_5"
                android:layout_width="289dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:background="@drawable/line_3"
                android:layout_below="@id/enter_address"
                />
            <RelativeLayout
                android:id="@+id/rectangle_button_green"
                android:layout_width="305dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/line_5"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle_4_btn_green"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/update"
                    android:textAppearance="@style/update"
                    android:textSize="16sp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rectangle_pink"
                android:layout_width="305dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/rectangle_button_green"
                android:layout_marginTop="5dp"
                android:background="@drawable/rectangle_4_btn_pink">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/log_out"
                    android:textAppearance="@style/logoutbtn"
                    android:textSize="16sp"
                    />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/frame_26"
            android:layout_width="326dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp">
            <RelativeLayout
                android:id="@+id/tab_bar"
                android:layout_width="306dp"
                android:layout_height="43dp"
                android:background="@drawable/tab_bar"
                android:layout_centerHorizontal="true"
                android:clipToOutline="true">

                <RelativeLayout
                    android:id="@+id/iconhome"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/home"
                    android:clipToOutline="true" />

                <RelativeLayout
                    android:id="@+id/iconsetting"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="13dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/setting"
                    android:clipToOutline="true" />

                <RelativeLayout
                    android:id="@+id/iconlocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/location"
                    android:clipToOutline="true" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>