<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedBackActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background"
        android:scaleType="centerCrop"
        >
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/banner_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/banner_feedback"
            android:textAppearance="@style/banner_logi"
            android:textSize="32sp" />
        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="142dp"
            android:layout_toEndOf="@id/banner_setting"
            android:src="@drawable/arrow_back" />
        </RelativeLayout>
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/what_u_think"
            android:textSize="16sp"
            android:textAppearance="@style/what_do_you"
            />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/rate_ur_level"
                android:textAppearance="@font/poppins"
                android:textSize="13sp"
                />
        </RelativeLayout>
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                >
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/starrate"
                    android:button="@null"
                    android:checked="false"
                    android:id="@+id/star1"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/starrate"
                    android:button="@null"
                    android:checked="false"
                    android:layout_toEndOf="@id/star1"
                    android:layout_marginStart="15dp"
                    android:id="@+id/star2"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/starrate"
                    android:button="@null"
                    android:checked="false"
                    android:layout_toEndOf="@id/star2"
                    android:layout_marginStart="15dp"
                    android:id="@+id/star3"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/starrate"
                    android:button="@null"
                    android:checked="false"
                    android:layout_toEndOf="@id/star3"
                    android:layout_marginStart="15dp"
                    android:id="@+id/star4"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/starrate"
                    android:button="@null"
                    android:checked="false"
                    android:layout_toEndOf="@id/star4"
                    android:layout_marginStart="15dp"
                    android:id="@+id/star5"
                    />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/tell_us_more"
                android:textAppearance="@font/poppins"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rectangle4edittext"
                android:hint="@string/write_something"
                android:padding="10dp"
                android:maxLines="10"
                android:lines="8"
                android:minLines="6"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:singleLine="false"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">
            <TextView
                android:id="@+id/your_langua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/thank_you"
                android:textAppearance="@style/your_langua"
                android:gravity="center_horizontal|top"
                android:textSize="16sp"
                />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="101dp"
        android:id="@+id/button4confirm"
        android:background="@drawable/button4sendfeedback"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:textAppearance="@style/send_feedback"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/frame_26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_marginHorizontal="60dp"
        >
        <RelativeLayout
            android:id="@+id/tab_bar"
            android:layout_width="306dp"
            android:layout_height="43dp"
            android:background="@drawable/tab_bar"
            android:layout_centerHorizontal="true"
            >

            <RelativeLayout
                android:id="@+id/iconhome"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_centerVertical="true"
                android:background="@drawable/home"
                />
            <RelativeLayout
                android:id="@+id/iconsetting"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_centerVertical="true"
                android:background="@drawable/setting"
                />
            <RelativeLayout
                android:id="@+id/iconlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:layout_centerVertical="true"
                android:background="@drawable/location"  />
        </RelativeLayout>
    </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>